--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@clerk/express": "^1.7.63",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^6.19.2",
     "cors": "^2.8.5",
