--- a/backend/package.json
+++ b/backend/package.json
@@ -13,9 +13,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@clerk/express": "^1.7.63",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^6.19.2",
+    "@supabase/supabase-js": "^2.91.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
